--- a/package.json
+++ b/package.json
@@ -3,15 +3,65 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "docs": "node_modules/jsdoc/jsdoc.js -c config/jsdoc.json -t ./node_modules/ink-docstrap/template",
+    "test": "mocha --timeout 20000 test/",
+    "clean": "rm -rf node_modules",
+    "postinstall": "echo 'module.exports = {}' >> node_modules/bootstrap-loader/postcss.config.js",
+    "webpack": "NODE_ENV=production webpack --config ./config/webpack/webpack.config.pro.js --progress --debug",
+    "build:dev": "npm run postinstall && NODE_ENV=development node app",
+    "build:pro": "rm -rf static/build && npm run postinstall && npm run webpack && NODE_ENV=production node app",
+    "lint": "eslint public/scripts/js/**/*.js"
   },
   "dependencies": {
+    "art-dialog": "^7.0.0",
     "body-parser": "~1.17.1",
+    "bootstrap-daterangepicker": "^2.1.25",
+    "browser-sync": "^2.18.8",
+    "chalk": "^1.1.3",
+    "config": "^1.25.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "echarts": "^3.5.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "flatpickr": "^2.5.7",
+    "font-awesome": "^4.7.0",
+    "icheck": "^1.0.2",
+    "jquery": "^3.2.1",
+    "js-yaml": "^3.8.3",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "webpack": "^2.4.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "bootstrap-loader": "^2.0.0",
+    "bootstrap-sass": "^3.3.7",
+    "case-sensitive-paths-webpack-plugin": "^2.0.0",
+    "css-loader": "^0.28.0",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "14.1.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "4.0.0",
+    "eslint-plugin-react": "6.10.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "node-sass": "^4.5.2",
+    "postcss-loader": "^1.3.3",
+    "resolve-url-loader": "^2.0.2",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8"
   }
 }
